--- a/TimeDiagrammWPF_View/MainWindow.xaml
+++ b/TimeDiagrammWPF_View/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:TimeDiagrammWPF_View"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Background="White">
+    <StackPanel Orientation="Horizontal" Background="White">
         <Image x:Name="image" HorizontalAlignment="Center" VerticalAlignment="Top" Source="{Binding Diagramm}" Stretch="None"/>
-
-    </Grid>
+        <Image x:Name="image1" HorizontalAlignment="Center" VerticalAlignment="Top" Source="{Binding Diagramm2}" Stretch="None"/>
+    </StackPanel>
 </Window>
