Добавил разные кисти к диаграмме

--- a/TimeDiagrammWPF_View/MainWindow.xaml
+++ b/TimeDiagrammWPF_View/MainWindow.xaml
@@ -6,8 +6,14 @@
         xmlns:local="clr-namespace:TimeDiagrammWPF_View"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid Background="White">
-        <Image x:Name="image" HorizontalAlignment="Center" VerticalAlignment="Top" Source="{Binding Diagramm}" Stretch="None"/>
+    <StackPanel Orientation="Horizontal" Background="White">
+        <Border BorderBrush="Red" 
+        BorderThickness="2"  Margin="3">
+            <Image x:Name="image" Source="{Binding Diagramm}"/>
+        </Border>
 
-    </Grid>
+        <Border BorderBrush="Green" BorderThickness="2"  Margin="3">
+            <Image x:Name="image2" Source="{Binding Diagramm2}"/>
+        </Border>
+    </StackPanel>
 </Window>
