--- a/Diagrams.WpfView/MainWindow.xaml
+++ b/Diagrams.WpfView/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        <Image Name="image1" Stretch="Fill"/>
+        <Image Name="image1" Stretch="None"/>
     </Grid>
 </Window>
