--- a/Diagrams.WpfView/MainWindow.xaml
+++ b/Diagrams.WpfView/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        <Image Name="image1" Stretch="None"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Image Name="image1" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Grid>
 </Window>
